--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-# Copyright (C) 2024 Mitsubishi Electric Research Laboratories (MERL)
+# Copyright (C) 2024-2025 Mitsubishi Electric Research Laboratories (MERL)
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
 
+cvxpy==1.5.3
 matplotlib==3.8.3
 numpy==1.26.4
 omegaconf==2.3.0
